Bug Fix: Set character limits in form to prevent text overlap in resume

--- a/form.css
+++ b/form.css
@@ -254,3 +254,6 @@ section {
 	display: flex;
 	flex-direction: column;
 }
+#gray-label {
+	color: #999;
+}
